[package]
name = "bevy_collision_ball"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_xpbd_2d = { version = "0.2.0", features = ["simd"] }
rand = "0.8.5"

[profile.release]
codegen-untils = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3